<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:id="@+id/tabla1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            tools:context="${relativePackage}.${activityClass}">
            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/nombre"/>
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="textPersonName">
                <requestFocus/>
            </EditText>
            <TableRow>
                <TextView
                    android:id="@+id/lblTel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel1"/>
                <TextView
                    android:id="@+id/lblTel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel2"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/txtTel1"
                    android:layout_width="0dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/txtTel2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:ems="10"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TextView
                android:id="@+id/lblDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/direccion"/>
            <EditText
                android:id="@+id/txtDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:inputType="textPostalAddress"/>
            <TextView
                android:id="@+id/lblNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/notas"/>
            <EditText
                android:id="@+id/txtNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:inputType="textMultiLine"/>
            <CheckBox
                android:id="@+id/cbxFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorito"/>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="limpiar"
                    android:text="@string/btn_limpiar"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_guardar"
                    android:onClick="guardar"/>
            </TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_listar"
                android:onClick="listar"/>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>